# hamlib-fork

./: Makefile.am  configure.ac
include/hamlib/: riglist.h
satnogs/: Makefile.am  satnogs.c  satnogs.h  satnogs_cc.h  satnogs_gr.cc
satnogs/plugins/: Makefile  fm_plugin.cpp  plugin.hpp  wfm_plugin.cpp
satnogs/plugins/app/: app  app.cpp
src/: register.c
